--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-    "start": "node index",
-    "heroku-postbuild":"npm run build"
+    "start": "node index"
+   // "heroku-postbuild":"npm run build"
   },
   "keywords": [],
   "author": "",
